[package]
name = "ser-io"
description = "Library for reading SER files used in astrophotography"
license = "MIT"
authors = ["Andy Grove <andygrove73@gmail.com>"]
repository = "https://github.com/andygrove/ser-io"
keywords = ["ser", "astrophotography"]
readme = "README.md"
version = "0.3.0"
edition = "2018"

[dependencies]
memmap2 = "0.6"
byteorder = "1.4"

[dev-dependencies]
structopt = "0.3"